Add part of html

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,1 +1,8 @@
-<main class="page__main">@@label</main>
+<main class="page__main">
+    <form action="/signup" method="get">
+        <label for="select__cardnumber"></label>
+        <input type="radio" name="4">
+        <input type="radio" name="6">
+        <input type="radio" name="8">
+    </form>
+</main>
