--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<title>Adalab Web Starter Kit</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Juego de parejas Pokemon</title>
   <link rel="icon" href="favicon.png"/>
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -11,5 +12,6 @@
     <partial src="_header.html" label="Header"></partial>
     <partial src="_main.html" label="Main"></partial>
   </div>
+  <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
