--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,1 +1,3 @@
-<header class="page__header">@@label</header>
+<header class="page__header">
+    <h1 class="title__game">EL juego de las parejas</h1>
+</header>
