Finish the basic HTML

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,8 +1,37 @@
 <main class="page__main">
     <form action="/signup" method="get">
-        <label for="select__cardnumber"></label>
-        <input type="radio" name="4">
-        <input type="radio" name="6">
-        <input type="radio" name="8">
+        <input type="radio" name="number__cards" id="number__four" value="4" checked>
+        <label for="number__four">4</label>
+        <input type="radio" name="number__cards" id="number__six" value="6">
+        <label for="number__six">6</label>
+        <input type="radio" name="number__cards" id="number__eight" value="8">
+        <label for="number__eight">8</label>
     </form>
+    <button class="button">Comenzar</button>
+    <ul class="card_list">
+        <li>
+            <img src="" alt="Carta Pikachu delantera">
+        </li>
+        <li>
+            <img src="" alt="Carta Bulbasaur trasera">
+        </li>
+        <li>
+            <img src="" alt="Carta Bulbasaur delantera">
+        </li>
+        <li>
+            <img src="" alt="Carta Pikachu trasera">
+        </li>
+        <li>
+            <img src="https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB." alt="Carta Adalab">
+        </li>
+        <li>
+            <img src="https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB." alt="Carta Adalab">
+        </li>
+        <li>
+            <img src="https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB." alt="Carta Adalab">
+        </li>
+        <li>
+            <img src="https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB." alt="Carta Adalab">
+        </li>
+    </ul>
 </main>
