Add coments in js file

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,6 +1,6 @@
 <main class="page__main">
     <form action="/signup" method="get">
-        <input type="radio" name="number__cards" id="number__four" value="4" checked>
+        <input type="radio" name="number__cards" id="number__four" value="4">
         <label for="number__four">4</label>
         <input type="radio" name="number__cards" id="number__six" value="6">
         <label for="number__six">6</label>
