Add petition to server in js

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -8,30 +8,5 @@
         <label for="number__eight">8</label>
     </form>
     <button class="button">Comenzar</button>
-    <ul class="card_list">
-        <li>
-            <img src="" alt="Carta Pikachu delantera">
-        </li>
-        <li>
-            <img src="" alt="Carta Bulbasaur trasera">
-        </li>
-        <li>
-            <img src="" alt="Carta Bulbasaur delantera">
-        </li>
-        <li>
-            <img src="" alt="Carta Pikachu trasera">
-        </li>
-        <li>
-            <img src="https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB." alt="Carta Adalab">
-        </li>
-        <li>
-            <img src="https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB." alt="Carta Adalab">
-        </li>
-        <li>
-            <img src="https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB." alt="Carta Adalab">
-        </li>
-        <li>
-            <img src="https://via.placeholder.com/160x195/30d9c4/ffffff/?text=ADALAB." alt="Carta Adalab">
-        </li>
-    </ul>
+    <ul class="card__list"></ul>
 </main>
