--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -1,1 +1,10 @@
-$color-white: #f3f4f5;
+body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: white;
+    color: black;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+}
