Add styles in order to hidden the cards

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,11 +1,11 @@
 <main class="page__main">
   <div class="form__game">
     <form action="/signup" method="get">
-      <input type="radio" name="number__cards" id="number__four" value="4">
+      <input type="radio" name="number__cards" id="number__four" value="4" class="input__number">
       <label for="number__four">4</label>
-      <input type="radio" name="number__cards" id="number__six" value="6">
+      <input type="radio" name="number__cards" id="number__six" value="6" class="input__number">
       <label for="number__six">6</label>
-      <input type="radio" name="number__cards" id="number__eight" value="8">
+      <input type="radio" name="number__cards" id="number__eight" value="8" class="input__number">
       <label for="number__eight">8</label>
     </form>
     <button class="button">Comenzar</button>
