--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -1,17 +1,44 @@
 .form__game {
     display: flex;
     justify-content: center;
+    font-size: 20px;
+}
+
+.input__number {
+    width: 20px;
+    height: 20px;
+    margin-top: 10px;
 }
 
 .button {
     margin-left: 20px; 
-    
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
 }
 
 .card__list{
     list-style-type: none;
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
+}
+
+.card__image {
+    display: flex;
+    flex-direction: column;
+}
+
+.pokemon__card--forward, .pokemon__card--reverse {
+    width: 200px;
+    height: 235px;
+    border: 1px solid black;
+    margin: 20px;
+    border-radius: 11px 11px 11px 11px;
+}
+
+.pokemon__card--reverse {
+    position: absolute;
 }
 
 .hidden {
