All styles okey done

--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     font-size: 20px;
+    margin-bottom: 50px;
 }
 
 .input__number {
@@ -15,6 +16,7 @@
     width: 150px;
     height: 50px;
     font-size: 20px;
+    border-radius: 11px 11px 11px 11px;
 }
 
 .card__list{
