--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -1,50 +1,51 @@
 .form__game {
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  margin-bottom: 50px;
 }
 
 .input__number {
-    width: 20px;
-    height: 20px;
-    margin-top: 10px;
+  width: 20px;
+  height: 20px;
+  margin-top: 10px;
 }
 
 .button {
-    margin-left: 20px; 
-    width: 150px;
-    height: 50px;
-    font-size: 20px;
-    border-radius: 11px 11px 11px 11px;
+  margin-left: 20px;
+  width: 150px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 11px 11px 11px 11px;
 }
 
-.card__list{
-    list-style-type: none;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    padding: 30px;
+.card__list {
+  list-style-type: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 30px;
 }
 
 .card__image {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
-.pokemon__card--forward, .pokemon__card--reverse {
-    width: 200px;
-    height: 235px;
-    border: 1px solid black;
-    border-radius: 11px 11px 11px 11px;
-    margin: 20px;
+.pokemon__card--forward,
+.pokemon__card--reverse {
+  width: 200px;
+  height: 235px;
+  border: 1px solid black;
+  border-radius: 11px 11px 11px 11px;
+  margin: 20px;
 }
 
 .pokemon__card--reverse {
-    position: absolute;
+  position: absolute;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
