Do few changes in button style

--- a/_src/assets/scss/layout/_main.scss
+++ b/_src/assets/scss/layout/_main.scss
@@ -15,8 +15,9 @@
   margin-left: 20px;
   width: 100px;
   height: 40px;
-  font-size: 20px;
+  font-size: 15px;
   border-radius: 11px 11px 11px 11px;
+  text-align: center;
 }
 
 .card__list {
