Changes with nasi

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -10,5 +10,6 @@
     </form>
     <button class="button">Comenzar</button>
   </div>
+  <div class="counter">0</div>
   <ul class="card__list"></ul>
 </main>
